# Milo-BL2-SDK-Mods

./: README.md  modinfo.json
ChangeUtil/: __init__.py
EffectRandomizer/: EffectRandomizer.sdkmod  __init__.py
EffectRandomizer/EffectRandomizer/: Readme.md  __init__.py  changes.py  pyproject.toml
LilithPatch/: __init__.py
MyFavoriteMod/: MyFavoriteMod.sdkmod  __init__.py
MyFavoriteMod/MyFavoriteMod/: Readme.md  __init__.py  pyproject.toml
PlayerRandomizer/: PlayerRandomizer.sdkmod  __init__.py  readme.md
PlayerRandomizer/PlayerRandomizer/: Readme.md  __init__.py  character_hint.py  characters.py  class_mod_patcher.py  dependency.py  pyproject.toml  skill_pool.py  skills.py
StorageManager/: __init__.py
