[project]
name = "Player Randomizer"
version = "2.02"
authors = [{ name = "milo" }]
description = """\
Play Borderlands 2, TPS, or Attack on Dragon Keep with randomized skills and
class mods.
"""

[project.urls]
Changelog = "https://github.com/ncalvin1/Milo-BL2-SDK-Mods/blob/master/PlayerRandomizer/PlayerRandomizer/Readme.md"

[tool.sdkmod]
name = "Player Randomizer"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "Unknown"
download = "https://raw.githubusercontent.com/ncalvin1/Milo-BL2-SDK-Mods/refs/heads/main/PlayerRandomizer/PlayerRandomizer.sdkmod"
